--- a/src/anypicker.css
+++ b/src/anypicker.css
@@ -98,7 +98,7 @@ body.noscroll
 	width: 100%;
 	height: 100%;
 
-	font-family: sans-serif;
+	font-family: 'IRANSans-web';
 	/*font-family: 'Helvetica Neue', Arial, sans-serif;*/
 	font-size: 22px;
 }
